endpoints
- added "name" query param to GET pokemons
- created GET pokemons/{id}
