# src/main/resources/openapi/roundest.yaml
@@ -1,22 +1,34 @@
 openapi: 3.0.3
 info:
   title: roundest API
-  description: A RESTful API for "The Roundest Pokémon" programming exercise. Only 1st Gen Pokemons.
+  description:
+    A RESTful API for "The Roundest Pokémon" programming exercise. Only 1st Gen
+    Pokémon.
   version: 1.0.0
   contact:
     name: Pollito
     url: https://pollito.dev
 servers:
-  - url: 'http://localhost:8080'
+  - url: "http://localhost:8080"
     description: dev
 paths:
   /pokemons:
     get:
       tags:
         - Pokemon
-      summary: List all Pokemons
+      summary: List all Pokémon
       operationId: findAll
       parameters:
+        - description:
+            Use this parameter to filter pokémon by checking if provided string
+            is part of a name (all ignore case). If not used, no filtering will
+            be done.
+          in: query
+          name: name
+          schema:
+            minLength: 3
+            maxLength: 10
+            type: string
         - description: Use this parameter to specify the page of your request
           in: query
           name: pageNumber
@@ -25,7 +37,9 @@ paths:
             minimum: 0
             maximum: 2147483647
             type: integer
-        - description: Use this parameter to specify a pagination limit (number of results per page) for your request
+        - description:
+            Use this parameter to specify a pagination limit (number of results
+            per page) for your request
           in: query
           name: pageSize
           schema:
@@ -33,44 +47,78 @@ paths:
             maximum: 10
             minimum: 1
             type: integer
-        - description: Use this parameter to specify the property by which you want to sort the results of your request
+        - description:
+            Use this parameter to specify the property by which you want to sort
+            the results of your request
           in: query
           name: sortProperty
           schema:
-            $ref: '#/components/schemas/PokemonSortProperty'
-        - description: Use this parameter to specify the direction (asc or desc) of your request results
+            $ref: "#/components/schemas/PokemonSortProperty"
+        - description:
+            Use this parameter to specify the direction (asc or desc) of your
+            request results
           in: query
           name: sortDirection
           schema:
-            $ref: '#/components/schemas/SortDirection'
-        - description: when this parameter is true, will bring (pageSize) random results, ignoring all other parameters except for pageSize
+            $ref: "#/components/schemas/SortDirection"
+        - description:
+            when this parameter is true, will bring (pageSize) random results,
+            ignoring all other parameters except for pageSize
           in: query
           name: random
           schema:
             type: boolean
             default: false
       responses:
-        '200':
-          description: List of Pokemons
+        "200":
+          description: List of Pokémon
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Pokemons'
+                $ref: "#/components/schemas/Pokemons"
         default:
           description: Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
   /pokemons/{id}:
+    get:
+      tags:
+        - Pokemon
+      summary: Get Pokémon by id
+      operationId: findById
+      parameters:
+        - description: User identifier
+          in: path
+          name: id
+          required: true
+          schema:
+            format: int64
+            type: integer
+      responses:
+        "200":
+          description: A Pokémon
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pokemon"
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
     patch:
       tags:
         - Pokemon
-      summary: Increment Pokemon's votes property by 1
-      description: Increment Pokemon's votes property by 1. Pokemon is identified by id. No body is required. On success, status 204 with no body is returned
+      summary: Increment Pokémon's votes property by 1
+      description:
+        Increment Pokémon's votes property by 1. Pokémon is identified by id. No
+        body is required. On success, status 204 with no body is returned
       operationId: incrementPokemonVotes
       parameters:
-        - description: Pokemon id
+        - description: Pokémon id
           in: path
           name: id
           required: true
@@ -81,13 +129,13 @@ paths:
             type: integer
       responses:
         204:
-          description: Pokemon vote count incremented +1 successfully
+          description: Pokémon vote count incremented +1 successfully
         default:
           description: Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
 components:
   schemas:
     Error:
@@ -117,7 +165,9 @@ components:
           example: "0c6a41e22fe6478cc391908406ca9b8d"
           type: string
         type:
-          description: used to point the client to documentation where it is explained clearly what happened and why.
+          description:
+            used to point the client to documentation where it is explained
+            clearly what happened and why.
           example: "about:blank"
           type: string
       type: object
@@ -139,24 +189,24 @@ components:
     Pokemon:
       properties:
         id:
-          description: Pokemon id
+          description: Pokémon id
           example: 1
           format: int64
           minimum: 1
           maximum: 151
           type: integer
         name:
-          description: Pokemon name
+          description: Pokémon name
           example: Bulbasaur
           maxLength: 10
           type: string
         spriteUrl:
-          description: Pokemon sprite url
+          description: Pokémon sprite url
           example: https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png
           maxLength: 255
           type: string
         votes:
-          description: Pokemon current votes as "the roundest"
+          description: Pokémon current votes as "the roundest"
           example: 1
           minimum: 0
           maximum: 2147483647
@@ -167,23 +217,19 @@ components:
         content:
           type: array
           items:
-            $ref: '#/components/schemas/Pokemon'
+            $ref: "#/components/schemas/Pokemon"
         pageable:
-          $ref: '#/components/schemas/Pageable'
+          $ref: "#/components/schemas/Pageable"
         totalElements:
           description: Total number of items that meet the criteria
           example: 10
           type: integer
       type: object
     PokemonSortProperty:
-      enum: [
-        id,
-        name,
-        votes
-      ]
+      enum: [id, name, votes]
       default: id
       type: string
     SortDirection:
       type: string
-      enum: [ ASC, DESC ]
+      enum: [ASC, DESC]
       default: ASC
